# zinc

./: Cargo.toml
.cargo/: config
examples/blink_am335x/: .gdb_history  Cargo.toml  armv7-none-gnueabihf.json  armv7-ugh-gnueabihf.json  linker.sh
examples/blink_am335x/.cargo/: config
examples/blink_am335x/src/: main.rs
examples/blink_stm32f4/src/: main.rs
ioreg/src/: lib.rs  parser.rs
ioreg/src/builder/: accessors.rs  getter.rs  mod.rs  register.rs  setter.rs  union.rs  utils.rs
ioreg/tests/: test.rs
src/: lib.rs
src/hal/: layout_common.ld  mod.rs
src/hal/am335x/: adc.rs  gpio.rs  init.rs  iomem.ld  layout.ld  mod.rs  peripheral_clock.rs  pin.rs  power.rs  uart.rs  util.rs  wakeup_clock.rs
src/hal/cortex_a8/: mod.rs
src/hal/stm32f4/: i2c.rs  iomem.ld  mod.rs  pin.rs
src/util/: app.rs
volatile_cell/: lib.rs
